syntax = "proto3";

package disks;

import "cloud/disk_manager/internal/pkg/types/types.proto";

option go_package = "github.com/ydb-platform/nbs/cloud/disk_manager/internal/pkg/services/disks/protos";

////////////////////////////////////////////////////////////////////////////////

enum MigrateDiskTaskEvents {
    FINISH_MIGRATION = 0;
}

message MigrateDiskRequest {
    types.Disk Disk = 1;
    string DstZoneId = 2;
    string DstPlacementGroupId = 3;
    uint32 DstPlacementPartitionIndex = 4;
}

// Should be in sync with statuses from public API.
enum MigrationStatus {
    Unspecified = 0;
    Replicating = 1;
    FinishingReplication = 2;
    ReplicationFinished = 3;
    Finishing = 4;
}

message RelocateInfo {
    string BaseDiskID = 1;
    string TargetBaseDiskID = 2;
    uint64 SlotGeneration = 3;
}

message MigrateDiskTaskState {
    reserved 1 to 5;

    bool   IsDiskCloned = 6;
    uint64 FillSeqNumber = 7;
    uint64 FillGeneration = 8;
    string ReplicateTaskID = 9;
    MigrationStatus Status = 10;

    RelocateInfo RelocateInfo = 11;
}
